fix header/nav z-index

--- a/src/components/AddNetworkModal.scss
+++ b/src/components/AddNetworkModal.scss
@@ -10,7 +10,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 100;
+  z-index: var(--z-index-modal);
 
   &__background {
     background: var(--color-opac-b-4);
